# blog-post-code

./: .gitignore  .gitmodules  LICENSE  README.md
c/cmake-basic/: CMakeLists.txt  README.md
c/cmake-basic/calcApp/: CMakeLists.txt  main.cpp
c/cmake-basic/calcLib/: CMakeLists.txt
c/cmake-basic/calcLib/include/calc/: Calc.h
c/cmake-basic/calcLib/src/: Calc.cpp
c/cmake-opengl/: CMakeLists.txt
c/cmake-opengl/glad/src/: glad.c
c/cmake-opengl/lib/glad/include/glad/: glad.h
c/cmake-opengl/lib/glad/src/: glad.c
c/cmake-opengl/src/: main.cpp
java/inherited-jackson-serializers/: README.md  pom.xml
java/inherited-jackson-serializers/src/main/java/uk/co/andygibson/blog/jackson/inheritedSerializers/: Main.java
java/inherited-jackson-serializers/src/main/java/uk/co/andygibson/blog/jackson/inheritedSerializers/model/: Dog.java  Person.java  Pet.java  Snake.java
java/inherited-jackson-serializers/src/main/java/uk/co/andygibson/blog/jackson/inheritedSerializers/model/ser/: DogSerializer.java  ObjectSerializer.java  PersonSerializer.java  PetSerializer.java  SnakeSerializer.java
java/intro-jackson-serializers/: README.md  pom.xml
java/intro-jackson-serializers/src/main/java/uk/co/andygibson/blog/jackson/introToSerializers/: Main.java
java/intro-jackson-serializers/src/main/java/uk/co/andygibson/blog/jackson/introToSerializers/model/: Dog.java  Person.java  Pet.java  Snake.java
java/intro-jackson-serializers/src/main/java/uk/co/andygibson/blog/jackson/introToSerializers/model/ser/: PersonSerializer.java  PetSerializer.java
java/proc-terrain-java-part-1/src/main/java/uk/co/andygibson/blog/terrain/proc/part1/: Main.java
java/terrain/proc-terrain-java-part-1/: pom.xml
java/terrain/proc-terrain-java-part-2/: pom.xml
java/terrain/proc-terrain-java-part-2/src/main/java/uk/co/andygibson/blog/terrain/proc/part2/: HeightProvider.java  Main.java
